--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         nightly_build: [ 'Python', 'LinuxRelease', 'Android', 'Julia', 'Main', 'OSX', 'R', 'Swift', 'SwiftRelease', 'Windows' ]
     steps:
       - uses: actions/checkout@v4
+      - run: sudo apt-get update -y -qq && sudo apt-get install -y -qq duckdb pip gh jq python3-requests
       - name: Create run status report for ${{ matrix.nightly_build }} nighlty-builds
         continue-on-error: true
         run: |
