--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         nightly_build: [ 'Python', 'LinuxRelease', 'Android', 'Julia', 'Main', 'OSX', 'R', 'Swift', 'SwiftRelease', 'Windows' ]
     steps:
       - uses: actions/checkout@v4
-      - run: pip install duckdb pandas
+      - run: pip install duckdb pandas tabulate
       - name: Create run status report for ${{ matrix.nightly_build }} nighlty-builds
         continue-on-error: true
         run: |
