--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,7 @@ jobs:
           
           # count consecutive failures and create a run_status.md file
           python scripts/count_consecutive_failures.py input_${{ matrix.nightly_build }}.json --nightly_build ${{ matrix.nightly_build }}
+      - uses: actions/upload-artifact@v4
+        with:
+          path: run_status_${{ matrix.nightly_build }}.md
+          name: ${{ matrix.nightly_build }}
